--- a/css/profile.css
+++ b/css/profile.css
@@ -133,10 +133,70 @@ background-size:100px 50px;
 }
 
 #carousel-subtitles {
+    position: relative;
+    top: -8rem;
     display: block;
     text-align: center;
-    color: #696969;
     height: 4em;
+    font-size: 2vw;
+}
+
+#grey-out-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.8);
+    display: none;
+}
+
+#project-modal {
+    position: fixed;
+    top: 10vh;
+    height: 85vh;
+    left: 15vw;
+    width: 70vw;
+    background-color: white;
+    display: none;
+    border-radius: 2em;
+    box-shadow: 3px 3px;
+    padding: 2px;
+    z-index: 1050;
+}
+
+.modal-img {
+    width: 100%;
+    border-top-left-radius: 2em;
+    border-top-right-radius: 2em;
+    height: 25vh;
+
+}
+
+.modal-body {
+    margin: 1vw;
+    overflow-y: scroll;
+    height: 47vh;
+}
+
+.modal-body h2 {
+    margin: 0;
+}
+
+.modal-footer {
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    right: 0;
+}
+
+.stroke {
+    color: #FFFFFF;
+    filter: drop-shadow(1.5px 0px 0 #000000) 
+            drop-shadow(0px 1.5px 0 #000000) 
+            drop-shadow(0px -1.5px 0 #000000) 
+            drop-shadow(-1.5px 0px 0 #000000);
+    letter-spacing: 1px;
 }
 
 #skills-section {
@@ -171,18 +231,6 @@ background-size:100px 50px;
     width: 100%;
 }
 
-h2 .skills-text {
-    height: 1em;
-    width: 3em;
-}
-
-.skills-text {
-    position: absolute;
-    height: 8.9em;
-    width: 5.6em;
-    padding: 0;
-}
-
 .skill-level {
     display: block;
     padding: 0;
@@ -199,6 +247,10 @@ h2 .skills-text {
 
 .skill-level:last-child {
     width: 5.4rem;
+}
+
+.skill-level li, .skill-level h2 {
+    line-height: 0.9em;
 }
 
 #experience-section {
@@ -255,8 +307,8 @@ h2 .skills-text {
 }
 
 .icon {
-    width: 2em;
-    height: 2em;
+    width: 2vw;
+    height: 2vw;
 }
 
 .school {
