--- a/css/profile576.css
+++ b/css/profile576.css
@@ -96,7 +96,7 @@
         display: inline-block;
     }
 
-    #project-section, #business-card {
+    #project, #business-card {
     background-color:#eeeeee;
     background-image: 
     radial-gradient(circle at 100% 150%, #eeeeee 24%, white 25%, white 28%, #eeeeee 29%, #eeeeee 36%, white 36%, white 40%, transparent 40%, transparent),
@@ -107,7 +107,7 @@
     background-size:100px 50px;
     }
 
-    #project-section .container {
+    #project .container {
         width: 40em;
         margin: 0 auto;
         margin-top: 2em;
@@ -118,16 +118,16 @@
         width: 32rem;
     }
 
-    #skills-section {
+    #skills {
         height: 25em;
     }
 
-    #skills-section h1, 
-    #experience-section h1 {
+    #skills h1, 
+    #experience h1 {
         margin-top: 2rem;
     }
 
-    #skills-section li {
+    #skills li {
         font-family: 'Impact', sans-serif;
         font-size: 2em;
         list-style: none;
@@ -156,12 +156,12 @@
     }
 
 
-    #experience-section {
+    #experience {
         color: #ffffff;
         background-color: #093852;
     }
 
-    #education-section {
+    #education {
         background-image: url('../img/pink-sky.jpg');
         background-size: 100%;
         background-color: #f8d0db;
@@ -170,15 +170,15 @@
 
     }
 
-    #education-section .container {
+    #education .container {
         width: 50em;
     }
 
-    #education-section .container.content {
+    #education .container.content {
         display: flex;
     }
 
-    #education-section h1 {
+    #education h1 {
         margin-top: 5rem;   
     }
 
@@ -222,7 +222,7 @@
         font-style: italic;
     }
 
-    #mooc-section {
+    #mooc {
         background-color: #2a2727;
     }
 
